--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "@testing-library/user-event": "^13.5.0",
     "date-fns": "^4.1.0",
     "framer-motion": "^11.9.0",
+    "js-cookie": "^3.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
-    "react-router-dom": "^6.26.2",
+    "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
